Implement swagger for update, delete & search endpoints
